--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,12 +35,13 @@ bind c kill-pane
 bind x swap-pane -D
 bind S choose-session
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key C-f last-window
 
 # Tmux corre config
 set-option -g default-terminal 'screen-254color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
-set -g prefix ^A
+set -g prefix ^F
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
