--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Tmux reset
 
 bind ^X lock-server
-bind ^C new-window -c "$HOME"
+bind n new-window -c "$HOME"
 bind ^D detach
 bind * list-clients
 
@@ -35,7 +35,7 @@ bind c kill-pane
 bind x swap-pane -D
 bind S choose-session
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key C-f last-window
+bind-key f last-window
 
 # Tmux corre config
 set-option -g default-terminal 'screen-254color'
@@ -53,7 +53,14 @@ set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+#fffccc
 
+# grep sessions
+bind S display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --header jump-to-session |\
+    xargs tmux switch-client -t"
 
 # List of plugins
 
@@ -61,7 +68,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 set -g @plugin 'catppuccin/tmux' # My fork that holds the meetings script bc I'm lazy af
 
 set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "number"
@@ -86,12 +93,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'omerxx/catppuccin-tmux' # My fork that holds the meetings script bc I'm lazy af
+# set -g @plugin 'omerxx/catppuccin-tmux' # My fork that holds the meetings script bc I'm lazy af
 
 set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'alacritty,fullscreen'
 set -g @resurrect-strategy-nvim 'session'
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
