--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ bind L next-window
 
 bind r command-prompt "rename-window %%"
 bind R source-file ~/.tmux.conf
-bind ^A last-window
+bind ^F last-window
 bind ^W list-windows
 bind w list-windows
 bind z resize-pane -Z
@@ -38,8 +38,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key f last-window
 
 # Tmux corre config
-set-option -g default-terminal 'screen-254color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
 
 set -g prefix ^F
 set -g base-index 1              # start indexing windows at 1 instead of 0
@@ -64,26 +63,35 @@ bind S display-popup -E "\
 # List of plugins
 
 # Theme plugins
-set -g @plugin 'catppuccin/tmux' # My fork that holds the meetings script bc I'm lazy af
+set -g @plugin "Nybkox/tmux-kanagawa"
+set -g @kanagawa-theme "dragon"
+set -g @kanagawa-show-powerline true
+set -g @kanagawa-git-disable-status false
+set -g @kanagawa-hg-disable-status true
+set -g @kanagawa-plugins "time battery ram-usage weather"
+set -g @kanagawa-show-timezone false
+# set -g @kanagawa-ignore-window-colors true
+# set -g @kanagawa-battery-label "Battery"
+# set -g @plugin 'catppuccin/tmux' # My fork that holds the meetings script bc I'm lazy af
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory meetings date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
-set -g @catppuccin_date_time_text "%H:%M"
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+# set -g @catppuccin_status_modules_right "directory meetings date_time"
+# set -g @catppuccin_status_modules_left "session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_right_separator_inverse "no"
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{pane_current_path}"
+# set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+# set -g @catppuccin_date_time_text "%H:%M"
 
 
 # Other plugins
@@ -103,4 +111,4 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @fzf-url-history-limit '2000'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
